--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,10 @@ title: Mohammad Amin
 email: m.alamin92@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   I am a web developer based in New York City, currently working at Techflex Inc.
-baseurl: "index.html" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site
+twitter_username: betterxhalf
+github_username: malamin92 
 
 # Build settings
 markdown: kramdown
