--- a/_config.yml
+++ b/_config.yml
@@ -13,19 +13,21 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Mo Al Amin
-email: m.alamin92@gmail.com
+title: Your awesome title
+email: your-email@example.com
 description: > # this means to ignore newlines until "baseurl:"
-  Hi, my name is Mo, I am a web-developer who lives in NYC. I have a fascination with the web, my favorite tech includes, JS, Ruby, React and much more. I like both back-end and front-end code but prefer the front end. On this site I share my ideas and thoughts on many tech and personal topics.
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: hackrnaut
-github_username:  moalamin
+twitter_username: jekyllrb
+github_username:  jekyll
 
 # Build settings
 markdown: kramdown
 theme: minima
-plugins:
+gems:
   - jekyll-feed
 
 # Exclude from processing.
