--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ github_username:  moalamin
 # Build settings
 markdown: kramdown
 theme: minima
-gems:
+plugins:
   - jekyll-feed
 
 # Exclude from processing.
